<resources>
    <string name="app_name">Audify</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="get_current_value">get current value</string>
    <string name="show_notification">Show Notification</string>
    <string name="create_channel">Create Channel</string>
    <string name="go_to_notification_screen">Go to Notification screen</string>
    <string name="go_to_compose_screen">Go to Compose Player screen</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="go_to_songs_screen">Go to Songs screen</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
</resources>